# HPM6750_TinyMaix_Benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: LICENSE  benchmark.c
